work on the navigation menu to link with the page section of it nav

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <a class="btnclose" href="#" onclick="closeMenu()">&times;</a>
                     <h4 class="logo"><span>ɭ'៣ </span>Ϧ៩♬ƦƬƜ៩ɭɭ</h4>
                     <ul>
-                        <li><a class="active" href="#">Articles</a></li>
-                        <li><a href="#">Chart</a></li>
-                        <li><a href="#">Awards</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a class="active" href="#experience">Articles</a></li>
+                        <li><a href="#chat">Chart</a></li>
+                        <li><a href="#award">Awards</a></li>
+                        <li><a href="#titleSection">About</a></li>
                     </ul>
                     <button class="btn">Get in Touch</button>
                 </nav>
@@ -44,7 +44,7 @@
 
         <section id="main">
                 <!--  =============this are the brands in partnership ==============-->
-            <div class="brands">
+            <div class="brands" id="award">
                 <img class="brand" src="images/Walmart.svg" alt="">
                 <img class="brand" src="images/JP Morgan.svg" alt="">
                 <img class="brand" src="images/Visa.svg" alt="">
@@ -54,7 +54,7 @@
             </div>
 
 
-            <div class="title-info">
+            <div class="title-info" id="chat">
                 <div class="spense">
                     <img class="image" src="images/Spense.png" alt="">
                     <h3>Spense.com</h3>
@@ -99,7 +99,7 @@
                 <img class="icon" src="images/Twitter.svg" alt="twittter-handle">
                 <img class="icon" src="images/LinkedIn.svg" alt="linkedin-handle">
                 <img class="icon" src="images/Github.svg" alt="github-handle">
-                <p>© Login form powered by @officialϦ៩♬ƦƬƜ៩ɭɭ</p> 
+                <p> Copyright &copy; 2022 powered by @officialϦ៩♬ƦƬƜ៩ɭɭ</p> 
             </div>
         </section>
     </div>
